--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="text_primary">#FFFFFF</color>
     <color name="text_secondary">#B3B3B3</color>
     <color name="error">#CF6679</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="gray">#999999</color>
+    <color name="dark_gray">#666666</color>
 </resources>
