--- a/SongVault/app/src/main/res/navigation/nav_graph.xml
+++ b/SongVault/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,8 @@
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_splashFragment_to_profileFragment"
-            app:destination="@id/profileFragment"
+            android:id="@+id/action_splashFragment_to_menuFragment"
+            app:destination="@id/menuFragment"
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true"
             app:enterAnim="@anim/digital_enter"
@@ -30,8 +30,8 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_profileFragment"
-            app:destination="@id/profileFragment"
+            android:id="@+id/action_loginFragment_to_menuFragment"
+            app:destination="@id/menuFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"
             app:enterAnim="@anim/digital_enter"
@@ -43,12 +43,36 @@
         android:name="song.vault.ui.auth.RegisterFragment"
         android:label="Register">
         <action
-            android:id="@+id/action_registerFragment_to_profileFragment"
-            app:destination="@id/profileFragment"
+            android:id="@+id/action_registerFragment_to_menuFragment"
+            app:destination="@id/menuFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"
             app:enterAnim="@anim/digital_enter"
             app:exitAnim="@anim/digital_exit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/menuFragment"
+        android:name="song.vault.ui.menu.MenuFragment"
+        android:label="Menu">
+        <action
+            android:id="@+id/action_menuFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_myPostsFragment"
+            app:destination="@id/myPostsFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_youtubeSearchFragment"
+            app:destination="@id/youtubeSearchFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_feedFragment"
+            app:destination="@id/feedFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_trendingFragment"
+            app:destination="@id/trendingFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_vaultListFragment"
+            app:destination="@id/vaultListFragment" />
     </fragment>
 
     <fragment
@@ -82,20 +106,8 @@
             android:id="@+id/action_profileFragment_to_editProfileFragment"
             app:destination="@id/editProfileFragment" />
         <action
-            android:id="@+id/action_profileFragment_to_myPostsFragment"
-            app:destination="@id/myPostsFragment" />
-        <action
-            android:id="@+id/action_profileFragment_to_youtubeSearchFragment"
-            app:destination="@id/youtubeSearchFragment" />
-        <action
             android:id="@+id/action_profileFragment_to_vaultListFragment"
             app:destination="@id/vaultListFragment" />
-        <action
-            android:id="@+id/action_profileFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
-        <action
-            android:id="@+id/action_profileFragment_to_trendingFragment"
-            app:destination="@id/trendingFragment" />
     </fragment>
 
     <fragment
@@ -110,6 +122,9 @@
         <action
             android:id="@+id/action_myPostsFragment_to_postDetailFragment"
             app:destination="@id/postDetailFragment" />
+        <action
+            android:id="@+id/action_myPostsFragment_to_youtubeSearchFragment"
+            app:destination="@id/youtubeSearchFragment" />
     </fragment>
 
     <fragment
